# 18xd27-package-music-player

./: .gitignore  CMakeLists.txt  README.md
MyPlayer/: MyPlayer.pro  dialog.cpp  dialog.h  dialog.ui  main.cpp  musicfile.cpp  musicfile.h  musiclist.cpp  musiclist.h  musicqueue.cpp  musicqueue.h  playerdialog.cpp  playerdialog.h  songTags.cpp  songTags.h
MyPlayer/include/taglib/lib/pkgconfig/: taglib.pc  taglib_c.pc
include/: playMusic.hpp
src/: main.cpp  playMusic.cpp
test/: CMakeLists.txt  sdltest.cpp
